Task 1 - Markdown fixes

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -31,7 +31,7 @@
     "Rather, you should use the Newton’s method. Start with an initial guess for the square root called $z_0$. You then repeatedly\n",
     "improve it using the following formula, until the difference between some previous guess $z_i$ and the next $z_{i+1}$ is less than some threshold, say 0.01\n",
     "\n",
-    "$$ z_{i+1} = z_i - \\frac{z_i*z_i - x}{2z_i}"
+    "$$ z_{i+1} = z_i - \\frac{z_i*z_i - x}{2z_i} $$"
    ]
   },
   {
@@ -137,9 +137,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***\n",
-    "\n",
     "### References\n",
+    "\n",
+    "***\n",
     "\n",
     "Agrawal U. (2022). *Find root of a number using Newton’s method.* Available online a <https://www.geeksforgeeks.org/find-root-of-a-number-using-newtons-method/>\n",
     "\n",
@@ -147,6 +147,11 @@
     "\n",
     "***"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
