Task 1 - Markdown fixes + Project Repo

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -35,8 +35,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solution:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +61,7 @@
     "        if abs(z_next - z) < threshold:\n",
     "            break\n",
     "        \n",
-    "        # Update the current approximation\n",
+    "        # Updating the current approximation\n",
     "        z = z_next\n",
     "    \n",
     "    return z"
@@ -69,15 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The square root of 101.0 is approximately 10.049925395190327\n",
-      "The square root of 101.0 rounded to 2 decimal points is approximately 10.05\n"
+      "The square root of 101.0 is approximately 10.049925395190327, rounded to 2 decimal points is 10.05\n"
      ]
     }
    ],
@@ -85,8 +91,27 @@
     "# Test the function on 101\n",
     "x = 101.0\n",
     "result = sqrt(x)\n",
-    "print(f\"The square root of {x} is approximately {result}\")\n",
-    "print(f\"The square root of {x} rounded to 2 decimal points is approximately {result:.2f}\")"
+    "print(f\"The square root of {x} is approximately {result}, rounded to 2 decimal points is {result:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square root of 13 is approximately 3.6058779145461, rounded to 2 decimal points is 3.61\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the function on 13\n",
+    "x = 13\n",
+    "result = sqrt(x)\n",
+    "print(f\"The square root of {x} is approximately {result}, rounded to 2 decimal points is {result:.2f}\")"
    ]
   },
   {
@@ -98,30 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The square root of 13 is approximately 3.6058779145461\n",
-      "The square root of 13 rounded to 2 decimal points is approximately 3.61\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test the function on 13\n",
-    "x = 13\n",
-    "result = sqrt(x)\n",
-    "print(f\"The square root of {x} is approximately {result}\")\n",
-    "print(f\"The square root of {x} rounded to 2 decimal points is approximately {result:.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The square root of 24 is approximately 4.908512720156556\n",
-      "The square root of 24 rounded to 2 decimal points is approximately 4.91\n"
+      "The square root of 24 is approximately 4.908512720156556, rounded to 2 decimal points is 4.91\n"
      ]
     }
    ],
@@ -129,8 +131,7 @@
     "# Test the function on 24\n",
     "x = 24\n",
     "result = sqrt(x)\n",
-    "print(f\"The square root of {x} is approximately {result}\")\n",
-    "print(f\"The square root of {x} rounded to 2 decimal points is approximately {result:.2f}\")"
+    "print(f\"The square root of {x} is approximately {result}, rounded to 2 decimal points is {result:.2f}\")"
    ]
   },
   {
@@ -139,9 +140,9 @@
    "source": [
     "### References\n",
     "\n",
-    "***\n",
+    "Agrawal U. (2022). *Find root of a number using Newton’s method.* Available online at: <https://www.geeksforgeeks.org/find-root-of-a-number-using-newtons-method/>\n",
     "\n",
-    "Agrawal U. (2022). *Find root of a number using Newton’s method.* Available online a <https://www.geeksforgeeks.org/find-root-of-a-number-using-newtons-method/>\n",
+    "Markdown Guide (n.d.). *Basic Syntax - The Markdown elements outlined in the original design document.* Available online at: <https://www.markdownguide.org/basic-syntax/#overview>\n",
     "\n",
     "Strang G., Herman E. (2016). *Newton’s Method. Calculus Volume 1.* Available online at: <https://math.libretexts.org/Bookshelves/Calculus/Calculus_(OpenStax)/04%3A_Applications_of_Derivatives/4.09%3A_Newtons_Method>\n",
     "\n",
