--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tasks: Machine Learning and Statistics\n",
+    "# Tasks: Machine Learning and Statistics\n",
     "\n",
     "Winter 2023/2024\n",
     "\n",
@@ -17,13 +17,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 1"
+    "## Task 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Description\n",
+    "\n",
+    "***\n",
+    "\n",
     "Square roots are difficult to calculate. In Python, you typically use the power operator (a double asterisk) or a package such\n",
     "as `math`. In this task, you should write a function `sqrt(x)$` to approximate the square root of a floating point number `x` without\n",
     "using the power operator or a package.\n",
@@ -38,7 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solution:"
+    "### Solution\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -71,7 +77,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tests"
+    "### Tests\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -139,6 +147,8 @@
    "metadata": {},
    "source": [
     "### References\n",
+    "\n",
+    "***\n",
     "\n",
     "Agrawal U. (2022). *Find root of a number using Newton’s method.* Available online at: <https://www.geeksforgeeks.org/find-root-of-a-number-using-newtons-method/>\n",
     "\n",
