--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,6 +140,23 @@
     "x = 24\n",
     "result = sqrt(x)\n",
     "print(f\"The square root of {x} is approximately {result}, rounded to 2 decimal points is {result:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes\n",
+    "\n",
+    "The provided code defines a Python function called `sqrt(x)` that calculates the square root of a given number `x` using the Newton's method for finding square roots. It iteratively refines an initial guess until it reaches to a value that is within the specified threshold of accuracy. It's a numerical approximation technique commonly used in mathematics and engineering.\n",
+    "\n",
+    "1. Define a function `sqrt(x)` that takes an argument `x`.\n",
+    "2. Initialize a variable `z` to half of `x` as the initial guess for the square root.\n",
+    "3. Set a `threshold` of `0.01` to determine when the approximation is considered sufficiently close to the actual square root.\n",
+    "4. Enter a `while` loop until the desired level of accuracy is achieved.\n",
+    "5. Calculate the next approximation using the Newton's method formula. Update `z_next` based on the current approximation `z` and the input value `x`.\n",
+    "6. Using the `if` statement, check if the difference is below the `threshold`. Break the loop if `true`, otherwise, update `z` to the value of `z_next` for the next iteration of the loop.\n",
+    "7. Return the final approximation as the square root of `x`."
    ]
   },
   {
