Task 2 - Small fixes

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -29,7 +29,7 @@
     "***\n",
     "\n",
     "Square roots are difficult to calculate. In Python, you typically use the power operator (a double asterisk) or a package such\n",
-    "as `math`. In this task, you should write a function `sqrt(x)$` to approximate the square root of a floating point number `x` without\n",
+    "as `math`. In this task, you should write a function `sqrt(x)` to approximate the square root of a floating point number `x` without\n",
     "using the power operator or a package.\n",
     "\n",
     "Rather, you should use the Newton’s method. Start with an initial guess for the square root called $z_0$. You then repeatedly\n",
@@ -272,13 +272,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Coffee</td>\n",
+       "      <td>Tea</td>\n",
        "      <td>Chocolate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Tea</td>\n",
-       "      <td>Chocolate</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -287,7 +287,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Coffee</td>\n",
+       "      <td>Tea</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -298,16 +298,16 @@
        "    <tr>\n",
        "      <th>196</th>\n",
        "      <td>Coffee</td>\n",
-       "      <td>Chocolate</td>\n",
+       "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>Coffee</td>\n",
+       "      <td>Tea</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>Tea</td>\n",
+       "      <td>Coffee</td>\n",
        "      <td>Chocolate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -318,7 +318,7 @@
        "    <tr>\n",
        "      <th>200</th>\n",
        "      <td>Tea</td>\n",
-       "      <td>Plain</td>\n",
+       "      <td>Chocolate</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -328,16 +328,16 @@
       "text/plain": [
        "      drink    biscuit\n",
        "0       Tea  Chocolate\n",
-       "1    Coffee  Chocolate\n",
-       "2       Tea  Chocolate\n",
+       "1       Tea  Chocolate\n",
+       "2    Coffee      Plain\n",
        "3       Tea      Plain\n",
-       "4    Coffee      Plain\n",
+       "4       Tea      Plain\n",
        "..      ...        ...\n",
-       "196  Coffee  Chocolate\n",
-       "197  Coffee      Plain\n",
-       "198     Tea  Chocolate\n",
+       "196  Coffee      Plain\n",
+       "197     Tea      Plain\n",
+       "198  Coffee  Chocolate\n",
        "199  Coffee      Plain\n",
-       "200     Tea      Plain\n",
+       "200     Tea  Chocolate\n",
        "\n",
        "[201 rows x 2 columns]"
       ]
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -387,42 +387,19 @@
        "       [56, 45]]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "cross = ss.contingency.crosstab(df['drink'], df['biscuit'])\n",
     "cross"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array(['Coffee', 'Tea'], dtype=object),\n",
-       " array(['Chocolate', 'Plain'], dtype=object))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first, second = cross.elements\n",
-    "first, second"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +409,7 @@
        "       [56, 45]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +495,7 @@
     "***\n",
     "\n",
     "1. Four lists (`coffee_chocolate`, `tea_chocolate`, `coffee_plain`, and `tea_plain`) are created, each containing pairs of \"drink\" and \"biscuit\" values, indicating frequencies.\n",
-    "2. These four lists are merged into a single list called `raw_data`\n",
+    "2. These four lists are merged into a single list called `raw_data`.\n",
     "3. The order of elements in the `raw_data` list is shuffled using `random.shuffle(raw_data)`, effectively randomizing the dataset.\n",
     "4. The `zip(*raw_data)` operation splits the pairs of \"drink\" and \"biscuit\" into two separate lists.\n",
     "5. A pandas DataFrame `df` is created using these two lists, where \"drink\" and \"biscuit\" become columns in the DataFrame.\n",
