--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -276,7 +276,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Coffee</td>\n",
-       "      <td>Plain</td>\n",
+       "      <td>Chocolate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -285,13 +285,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Coffee</td>\n",
+       "      <td>Tea</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Tea</td>\n",
-       "      <td>Chocolate</td>\n",
+       "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -300,23 +300,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>Coffee</td>\n",
+       "      <td>Tea</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>Tea</td>\n",
-       "      <td>Chocolate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
        "      <td>Coffee</td>\n",
        "      <td>Plain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>Tea</td>\n",
+       "      <td>Chocolate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>Tea</td>\n",
-       "      <td>Plain</td>\n",
+       "      <td>Chocolate</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
@@ -331,15 +331,15 @@
       "text/plain": [
        "      drink    biscuit\n",
        "0       Tea      Plain\n",
-       "1    Coffee      Plain\n",
+       "1    Coffee  Chocolate\n",
        "2    Coffee      Plain\n",
-       "3    Coffee      Plain\n",
-       "4       Tea  Chocolate\n",
+       "3       Tea      Plain\n",
+       "4       Tea      Plain\n",
        "..      ...        ...\n",
-       "196  Coffee      Plain\n",
-       "197     Tea  Chocolate\n",
-       "198  Coffee      Plain\n",
-       "199     Tea      Plain\n",
+       "196     Tea      Plain\n",
+       "197  Coffee      Plain\n",
+       "198     Tea  Chocolate\n",
+       "199     Tea  Chocolate\n",
        "200     Tea  Chocolate\n",
        "\n",
        "[201 rows x 2 columns]"
@@ -565,11 +565,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data frames\n",
+    "# Dataframes\n",
     "import pandas as pd\n",
     "\n",
     "# Statistics\n",
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "[344 rows x 7 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        " Name: body_mass_g, dtype: float64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -861,16 +861,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is significant evidence of a difference in body mass between male and female Gentoo penguins.\n",
       "t-statistic: 14.721676481405709\n",
-      "p-value: 2.133687602018886e-28\n"
+      "p-value: 2.133687602018886e-28\n",
+      "\n",
+      "There is significant evidence of a difference in body mass between male and female Gentoo penguins.\n"
      ]
     }
    ],
@@ -881,14 +882,14 @@
     "# Defining the significance level \n",
     "alpha = 0.05\n",
     "\n",
+    "print(f\"t-statistic: {t_statistic}\")\n",
+    "print(f\"p-value: {p_value}\\n\")\n",
+    "\n",
     "# Checking if the p-value is less than alpha to determine significance\n",
     "if p_value < alpha:\n",
     "    print(\"There is significant evidence of a difference in body mass between male and female Gentoo penguins.\")\n",
     "else:\n",
-    "    print(\"There is no significant evidence of a difference in body mass between male and female Gentoo penguins.\")\n",
-    "\n",
-    "print(f\"t-statistic: {t_statistic}\")\n",
-    "print(f\"p-value: {p_value}\")\n"
+    "    print(\"There is no significant evidence of a difference in body mass between male and female Gentoo penguins.\")"
    ]
   },
   {
